[package]
name = "i_dao_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i_dao = "0.1.0"
log = "0.4.21"
env_logger = "0.11.3"
mysql = "25.0.0"
r2d2_mysql = "24.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"